--- a/index.html
+++ b/index.html
@@ -151,6 +151,24 @@
             <button>🎫 Cupón de descuento</button>
         </a>
     </div>
+    <div class="card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4Hf882YWymPqCwv1BEMoP05YCxC8KxobXwg&s" alt="Star+">
+        <h3>Youtube</h3>
+        <p>🎁 Suscríbete y recibe un mes gratis</p>
+        <div class="countdown" id="countdown5"></div>
+        <a href="https://www.youtube.com" target="_blank">
+            <button>🎫 Cupón de descuento</button>
+        </a>
+    </div>
+    <div class="card">
+        <img src="https://media.overclock3d.net/2024/03/VBaoI0qm-Steam.jpg" alt="Star+">
+        <h3>Steam</h3>
+        <p>🎁 Un 15% de descuento en tu primera compra</p>
+        <div class="countdown" id="countdown6"></div>
+        <a href="https://www.steam.com" target="_blank">
+            <button>🎫 Cupón de descuento</button>
+        </a>
+    </div>
 </div>
 
 <script>
@@ -194,6 +212,8 @@
         startCountdown("countdown2", 86400);
         startCountdown("countdown3", 86400);
         startCountdown("countdown4", 86400);
+        startCountdown("countdown5", 259200);
+        startCountdown("countdown6", 2200);
     };
 </script>
 
