--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
             font-size: 16px;
         }
 
+        .image-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .image-container img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+
         .container {
             display: flex;
             flex-wrap: wrap;
@@ -92,63 +105,119 @@
     <input type="text" id="search" placeholder="Buscar cupones...">
 </div>
 
+<div class="image-container">
+    <a href="https://www.tu-enlace-aqui.com" target="_blank">
+        <img src="https://i.ibb.co/FDb4YDk/santa.png" alt="" id="promoImage">
+    </a>
+</div>
+
 <div class="container" id="coupon-container">
-    <!-- Tarjetas generadas dinámicamente -->
+    <div class="card" id="card1">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZGYO4C9MB4L26stq6ROPG0k8S-ARsUPG6dGw_hjd8Tg&s" alt="Amazon">
+        <h3>Amazon</h3>
+        <p>🎁 Obtén un 10% de descuento en tu 1ra compra</p>
+        <div class="countdown" id="countdown1"></div>
+        <a href="https://www.amazon.com" target="_blank">
+            <button>🎫 Cupón de descuento</button>
+        </a>
+    </div>
+    <div class="card" id="card2">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIWs53-bMdTldLdd0uQlH49XcD0Cz-WLn4gA&usqp=CAU" alt="Star+">
+        <h3>Star+</h3>
+        <p>🎁 Suscríbete y recibe un mes gratis</p>
+        <div class="countdown" id="countdown2"></div>
+        <a href="https://www.star+.com" target="_blank">
+            <button>🎫 Cupón de descuento</button>
+        </a>
+    </div>
+    <div class="card" id="card3">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQg4gZ1QEeKB2uyiu_3yqb1Al5v_hJqA3ndoYuYBA4Qsg&s" alt="Play Store">
+        <h3>Play Store</h3>
+        <p>🎁 Un 15% de descuento en tu primera compra</p>
+        <div class="countdown" id="countdown3"></div>
+        <a href="https://www.playstore.com" target="_blank">
+            <button>🎫 Cupón de descuento</button>
+        </a>
+    </div>
+    <div class="card" id="card4">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaV6zY9NeHgfEn144TUE51B9LkrzGJG2wwHaCHZWtmqQ&s" alt="Netflix">
+        <h3>Netflix</h3>
+        <p>🎁 Prueba gratuita de un mes en Netflix</p>
+        <div class="countdown" id="countdown4"></div>
+        <a href="https://www.netflix.com" target="_blank">
+            <button>🎫 Cupón de descuento</button>
+        </a>
+    </div>
+    <div class="card" id="card5">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS4Hf882YWymPqCwv1BEMoP05YCxC8KxobXwg&s" alt="Star+">
+        <h3>Youtube</h3>
+        <p>🎁 Suscríbete y recibe un mes gratis</p>
+        <div class="countdown" id="countdown5"></div>
+        <a href="https://www.youtube.com" target="_blank">
+            <button>🎫 Cupón de descuento</button>
+        </a>
+    </div>
+    <div class="card" id="card6">
+        <img src="https://media.overclock3d.net/2024/03/VBaoI0qm-Steam.jpg" alt="Star+">
+        <h3>Steam</h3>
+        <p>🎁 Un 15% de descuento en tu primera compra</p>
+        <div class="countdown" id="countdown6"></div>
+        <a href="https://www.steam.com" target="_blank">
+            <button>🎫 Cupón de descuento</button>
+        </a>
+    </div>
 </div>
 
 <script>
-    // Función para cargar datos desde data.json
-    async function loadCoupons() {
-        try {
-            const response = await fetch('data.json'); // Cargar archivo JSON
-            const coupons = await response.json(); // Convertir a objeto
-            const container = document.getElementById('coupon-container');
-            container.innerHTML = ''; // Limpiar contenedor
+    // Inicializar cuenta regresiva con almacenamiento local
+function startCountdown(id, duration) {
+    const countdownElement = document.getElementById(id);
+    const cardElement = countdownElement.closest('.card'); // La tarjeta que contiene este temporizador
 
-            coupons.forEach(coupon => {
-                const { id, name, description, image, link, expiresIn } = coupon;
-                const card = document.createElement('div');
-                card.classList.add('card');
-                card.innerHTML = `
-                    <img src="${image}" alt="${name}">
-                    <h3>${name}</h3>
-                    <p>${description}</p>
-                    <div class="countdown" id="countdown-${id}"></div>
-                    <a href="${link}" target="_blank">
-                        <button>🎫 Cupón de descuento</button>
-                    </a>
-                `;
-                container.appendChild(card);
-                startCountdown(`countdown-${id}`, expiresIn);
-            });
-        } catch (error) {
-            console.error('Error al cargar cupones:', error);
+    // Obtener tiempo guardado o calcular nuevo tiempo
+    const now = Date.now();
+    let savedTime = localStorage.getItem(id);
+    let endTime;
+
+    if (!savedTime || now > parseInt(savedTime, 10)) {
+        // Si no hay tiempo guardado o ya expiró, establecer un nuevo tiempo final
+        endTime = now + duration * 1000;
+        localStorage.setItem(id, endTime);
+    } else {
+        // Si el tiempo guardado sigue siendo válido, usarlo
+        endTime = parseInt(savedTime, 10);
+    }
+
+    const updateCountdown = () => {
+        const now = Date.now();
+        const remainingTime = Math.max(0, Math.floor((endTime - now) / 1000));
+
+        if (remainingTime > 0) {
+            // Mostrar el temporizador y la tarjeta si el tiempo es válido
+            const hours = Math.floor(remainingTime / 3600);
+            const minutes = Math.floor((remainingTime % 3600) / 60);
+            const seconds = remainingTime % 60;
+            countdownElement.textContent = `${hours}h ${minutes}m ${seconds}s`;
+            cardElement.style.display = "block";
+        } else {
+            // Ocultar la tarjeta si el tiempo expiró
+            countdownElement.textContent = ""; // Vaciar el contenido para evitar confusión
+            cardElement.style.display = "none";
         }
-    }
+    };
 
-    // Función para iniciar cuenta regresiva
-    function startCountdown(id, duration) {
-        const countdownElement = document.getElementById(id);
+    // Actualizar cada segundo
+    setInterval(updateCountdown, 1000);
+    updateCountdown();
+}
 
-        const updateCountdown = () => {
-            const now = Date.now();
-            const remainingTime = Math.max(0, Math.floor((duration - now) / 1000));
+// Reiniciar manualmente el tiempo para pruebas (puedes eliminar esta función después)
+function resetCardTime(id, newDuration) {
+    const endTime = Date.now() + newDuration * 1000;
+    localStorage.setItem(id, endTime);
+    location.reload(); // Recargar para actualizar la interfaz
+}
 
-            if (remainingTime > 0) {
-                const hours = Math.floor(remainingTime / 3600);
-                const minutes = Math.floor((remainingTime % 3600) / 60);
-                const seconds = remainingTime % 60;
-                countdownElement.textContent = `${hours}h ${minutes}m ${seconds}s`;
-            } else {
-                countdownElement.textContent = "Expiró";
-            }
-        };
-
-        setInterval(updateCountdown, 1000);
-        updateCountdown();
-    }
-
-    // Filtro de búsqueda
     document.getElementById('search').addEventListener('input', function () {
         const query = this.value.toLowerCase();
         const cards = document.querySelectorAll('.card');
@@ -159,8 +228,14 @@
         });
     });
 
-    // Cargar cupones al inicio
-    loadCoupons();
+    window.onload = function () {
+        startCountdown("countdown1", "card1", 86400);
+        startCountdown("countdown2", "card2", 86400);
+        startCountdown("countdown3", "card3", 86400);
+        startCountdown("countdown4", "card4", 86400);
+        startCountdown("countdown5", "card5", 259200);
+        startCountdown("countdown6", "card6", 1200);
+    };
 </script>
 
 </body>
