--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@ function resetCardTime(id, newDuration) {
     });
 
     window.onload = function () {
-        startCountdown("countdown1", "card1", 86400);
-        startCountdown("countdown2", "card2", 86400);
-        startCountdown("countdown3", "card3", 86400);
-        startCountdown("countdown4", "card4", 86400);
-        startCountdown("countdown5", "card5", 259200);
+        startCountdown("countdown1", "card1", 17086400);
+        startCountdown("countdown2", "card2", 10386400);
+        startCountdown("countdown3", "card3", 13086400);
+        startCountdown("countdown4", "card4", 10486400);
+        startCountdown("countdown5", "card5", 17259200);
         startCountdown("countdown6", "card6", 1200);
     };
 </script>
